@@ -20,6 +20,8 @@ solrAdminApp.controller('IndexController', function($scope, System, Cores, Const
   $scope.reload = function() {
     System.get(function(data) {
       $scope.system = data;
+      const releaseDate = parse_release_date($scope.system.lucene['solr-impl-version'])
+      $scope.releaseDaysOld = (new Date() - releaseDate)/1000/60/60/24;
 
       if ("username" in data.security) {
         // Needed for Kerberos, since this is the only place from where
@@ -82,6 +84,11 @@ var parse_memory_value = function( value ) {
   }
 
   return value;
+};
+
+const parse_release_date = function(value) {
+  const match = value.match( /.* (20\d\d-[0-1]\d-[0-3]\d) .*/ );
+  return match === null ? new Date() : new Date(match[1]);
 };
 
 var pretty_print_bytes = function(byte_value) {
