@@ -97,6 +97,9 @@ limitations under the License.
 
           </div>
 
+          <div class="content" ng-show="releaseDaysOld > 365">
+            <p class="warning-msg"><img src="img/ico/exclamation-button.png"/>&nbsp;WARNING: This Solr release is more than a year old. Consider upgrading.</p>
+          </div>
       </div>
 
     </div>
