@@ -222,6 +222,8 @@ Other Changes
 
 * SOLR-16534: Jaegertracer-Configurator is now deprecated. From v10.0 we'll only support OpenTelemetry (janhoy)
 
+* SOLR-14336: Warning about potentially old Solr version in Admin UI dashboard (janhoy)
+
 * SOLR-13243: Correct the initial capacity of the ZK operations to run in ShardLeaderElectionContextBase#runLeaderProcess (Haythem Khiri)
 
 * SOLR-16544: Improve documentation on how to contribute to Solr (Justin Sweeney)
